--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -12,3 +12,53 @@
 
 /* ================================ Base ================================ */
 @import './-base/**/*.scss';
+
+body {
+  font-family: $FFDefault;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 36px;
+  max-width: 1352px;
+}
+
+.btn {
+  cursor: pointer;
+  font-family: $FFDefault;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  width: fit-content;
+  padding: 12px 36px;
+  border-radius: 100px;
+  background-color: #000000;
+  border: 2px solid #000000;
+  transition: all 0.3s ease-in-out;
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      background-color: #dca1f9;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+
+  &:active {
+    background-color: #f2ddfd;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+.link {
+  cursor: pointer;
+  display: flex;
+  width: fit-content;
+  color: #bb7bda;
+  text-decoration: underline;
+}
