--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,5 +1,11 @@
 include layouts/modules/_m-head.pug
+include layouts/components/header.pug
+include layouts/components/footer.pug
 
 html(lang='ru')
   +m-head
   body
+    .content
+      div 
+        +header
+        +footer
