--- a/app/pug/layouts/components/header.pug
+++ b/app/pug/layouts/components/header.pug
@@ -1,1 +1,17 @@
-
+mixin header
+    .header
+        .container
+            .header__container
+                a(href='/').header__logo
+                    svg(width='100px' height='100px') 
+                        use( href="../assets/icons/sprite.svg#logo")
+                .header__case
+                    nav.header__nav
+                        a(href='##').header__nav-item Главная
+                        a(href='##').header__nav-item Преимущества
+                        a(href='##').header__nav-item Принципы
+                        a(href='##').header__nav-item Контакты
+                    button.btn
+                        | написать
+                        svg(width="20" height="20").btn__arrow 
+                            use( href="../assets/icons/sprite.svg#arrowRight")
