--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -25,6 +25,12 @@ body {
   max-width: 1352px;
 }
 
+.content > div {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
+
 .btn {
   cursor: pointer;
   font-family: $FFDefault;
@@ -38,20 +44,42 @@ body {
   width: fit-content;
   padding: 12px 36px;
   border-radius: 100px;
+  color: #ffffff;
   background-color: #000000;
   border: 2px solid #000000;
   transition: all 0.3s ease-in-out;
 
+  &__arrow {
+    fill: #ffffff;
+    transition: all 0.3s ease-in-out;
+  }
+
   @media (hover: hover) and (pointer: fine) {
     &:hover {
+      color: #000000;
       background-color: #dca1f9;
       transition: all 0.3s ease-in-out;
+
+      .btn {
+        &__arrow {
+          fill: #000000;
+          transition: all 0.3s ease-in-out;
+        }
+      }
     }
   }
 
   &:active {
+    color: #000000;
     background-color: #f2ddfd;
     transition: all 0.3s ease-in-out;
+
+    .btn {
+      &__arrow {
+        fill: #000000;
+        transition: all 0.3s ease-in-out;
+      }
+    }
   }
 }
 
