--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -11,7 +11,7 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('../assets/fonts/../assets/fonts/Montserrat-Bold.woff2') format('woff2'),
+    src: url('../assets/fonts/Montserrat-Bold.woff2') format('woff2'),
         url('../assets/fonts/Montserrat-Bold.woff') format('woff');
     font-weight: 500;
     font-style: normal;
