--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -6,7 +6,7 @@ html(lang='ru')
   +m-head
   body
     //- .image-container(id='img')
-    img(src="../assets/icons/icon/dots.svg" id='img').image-container
+    img(src="./assets/icons/icon/dots.svg" id='img').image-container
     .content
       div 
         +header
@@ -18,7 +18,7 @@ html(lang='ru')
                   h1.main__title Экстраверт — 
                   .main__text интегратор CRM-систем
                   svg(width="249" height="417").main__decor 
-                    use( href="../assets/icons/sprite.svg#and")
+                    use( href="./assets/icons/sprite.svg#and")
                   .main__text.main__text--right IT-консалтинг
             .stages
               .container
@@ -26,15 +26,15 @@ html(lang='ru')
                   .stages__block
                     .stages__block-title 8 лет опыта
                     svg(width="164" height="165").stages__block-icon 
-                      use( href="../assets/icons/sprite.svg#stage-1")
+                      use( href="./assets/icons/sprite.svg#stage-1")
                   .stages__block
                     .stages__block-title 100+ проектов
                     svg(width="164" height="165").stages__block-icon 
-                      use( href="../assets/icons/sprite.svg#stage-2")
+                      use( href="./assets/icons/sprite.svg#stage-2")
                   .stages__block
                     .stages__block-title CRM для всех
                     svg(width="164" height="165").stages__block-icon 
-                      use( href="../assets/icons/sprite.svg#stage-3")
+                      use( href="./assets/icons/sprite.svg#stage-3")
           section#advantages
             .advantages
               .container 
@@ -43,39 +43,39 @@ html(lang='ru')
                   .advantages__list
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-1")
+                        use( href="./assets/icons/sprite.svg#photoBox-1")
                       .advantages__item-text вся работа у вас в телефоне, с мобильным приложением
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-2")
+                        use( href="./assets/icons/sprite.svg#photoBox-2")
                       .advantages__item-text запись звонков сотрудников даже с мобильных телефонов
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-3")
+                        use( href="./assets/icons/sprite.svg#photoBox-3")
                       .advantages__item-text точное отображение процессов компании
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-4")
+                        use( href="./assets/icons/sprite.svg#photoBox-4")
                       .advantages__item-text наглядные результаты отдела продаж с аналитикой
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-5")
+                        use( href="./assets/icons/sprite.svg#photoBox-5")
                       .advantages__item-text весь рекламный трафик в одном окне
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-6")
+                        use( href="./assets/icons/sprite.svg#photoBox-6")
                       .advantages__item-text контроль взаимодействия сотрудников с клиентами
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-7")
+                        use( href="./assets/icons/sprite.svg#photoBox-7")
                       .advantages__item-text контроль сроков с автозадачами
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-8")
+                        use( href="./assets/icons/sprite.svg#photoBox-8")
                       .advantages__item-text легкий обмен информацией в команде
                     .advantages__item
                       svg(width="132" height="132").advantages__item-img
-                        use( href="../assets/icons/sprite.svg#photoBox-9")
+                        use( href="./assets/icons/sprite.svg#photoBox-9")
                       .advantages__item-text удобное управление проектами
           section#principles
             .principles
@@ -86,29 +86,29 @@ html(lang='ru')
                   .swiper
                     .swiper-wrapper
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox.png" alt="Box")
+                        img(src="./assets/images/PhotoBox.png" alt="Box")
                         .principles__swiper-text Клиент оставляет заявку удобным способом
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox-1.png" alt="Box")
+                        img(src="./assets/images/PhotoBox-1.png" alt="Box")
                         .principles__swiper-text CRM фиксирует клиента и определяет ответственного
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox-2.png" alt="Box")
+                        img(src="./assets/images/PhotoBox-2.png" alt="Box")
                         .principles__swiper-text Менеджер обрабатывает заявку
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox-3.png" alt="Box")
+                        img(src="./assets/images/PhotoBox-3.png" alt="Box")
                         .principles__swiper-text CRM напоминает о сроках и помогает в обработке
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox-4.png" alt="Box")
+                        img(src="./assets/images/PhotoBox-4.png" alt="Box")
                         .principles__swiper-text Истории переписок и звонков фиксируются в заявке
                       .swiper-slide 
-                        img(src="../assets/images/PhotoBox-5.png" alt="Box")
+                        img(src="./assets/images/PhotoBox-5.png" alt="Box")
                         .principles__swiper-text CRM с периодичностью выводит клиента на повторное обращение
                     .swiper-pagination
           section#feedback
             .feedback
               .container
                 .feedback__container
-                  img(src="../assets/images/cup.png" alt="").feedback__decor
+                  img(src="./assets/images/cup.png" alt="").feedback__decor
                   .feedback__info
                     .feedback__title Сделайте свой бизнес эффективнее!
                     .feedback__text Внедрите CRM с Экстраверт и контролируйте свой бизнес где угодно! Вам остается только проверять отчеты в конце недели и вносить коррективы в планы развития.
@@ -117,5 +117,5 @@ html(lang='ru')
                     button.feedback__btn.btn 
                       | написать
                       svg(width="20" height="20").btn__arrow 
-                        use( href="../assets/icons/sprite.svg#arrowRight")
+                        use( href="./assets/icons/sprite.svg#arrowRight")
         +footer
