--- a/app/pug/layouts/components/header.pug
+++ b/app/pug/layouts/components/header.pug
@@ -4,7 +4,7 @@ mixin header
             .header__container
                 a(href='/').header__logo
                     svg(width='100px' height='100px') 
-                        use( href="../assets/icons/sprite.svg#logo")
+                        use( href="./assets/icons/sprite.svg#logo")
                 .header__case
                     nav.header__nav
                         div.header__progress-bar
@@ -19,4 +19,4 @@ mixin header
                     button.btn
                         | написать
                         svg(width="20" height="20").btn__arrow 
-                            use( href="../assets/icons/sprite.svg#arrowRight")
+                            use( href="./assets/icons/sprite.svg#arrowRight")
